docs/v1.3.15/en/api/catalog-other.md
---
title: Other 类目录 / Class Catalog
sidebar: auto
---

# Other Class Catalog

This page lists every public type in this area from the 1.3.15 source, grouped by namespace. **62** types total, **62** with a deep doc page (linked). Auto-generated by `tools/gen-class-catalog.mjs`.

> Legend: C=class S=struct I=interface E=enum. 🔗 = has a deep doc page.

## (global) (8)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [BuildInfo](./campaign-ext/BuildInfo.md) | 🔗 |
| C | [EmptyGamepadNavigationContext](./campaign-ext/EmptyGamepadNavigationContext.md) | 🔗 |
| C | [GauntletGamepadNavigationContext](./campaign-ext/GauntletGamepadNavigationContext.md) | 🔗 |
| I | [IChatHandler](./campaign-ext/IChatHandler.md) | 🔗 |
| I | [IGamepadNavigationContext](./campaign-ext/IGamepadNavigationContext.md) | 🔗 |
| C | [MonoNativeFunctionWrapperAttribute](./campaign-ext/MonoNativeFunctionWrapperAttribute.md) | 🔗 |
| C | [MonoPInvokeCallbackAttribute](./campaign-ext/MonoPInvokeCallbackAttribute.md) | 🔗 |
| E | [WindingOrder](./campaign-ext/WindingOrder.md) | 🔗 |

## MBHelpers (1)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [BannerHelper](./campaign-ext/BannerHelper.md) | 🔗 |

## Sandbox.View.GameStates (1)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [PreloadState](./campaign-ext/PreloadState.md) | 🔗 |

## TaleWorlds.AchievementSystem (4)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [Achievement](./campaign-ext/Achievement.md) | 🔗 |
| C | [AchievementManager](./campaign-ext/AchievementManager.md) | 🔗 |
| I | [IAchievementService](./campaign-ext/IAchievementService.md) | 🔗 |
| C | [TestAchievementService](./campaign-ext/TestAchievementService.md) | 🔗 |

## TaleWorlds.ActivitySystem (6)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [Activity](./campaign-ext/Activity.md) | 🔗 |
| C | [ActivityManager](./campaign-ext/ActivityManager.md) | 🔗 |
| E | [ActivityOutcome](./campaign-ext/ActivityOutcome.md) | 🔗 |
| E | [ActivityTransition](./campaign-ext/ActivityTransition.md) | 🔗 |
| I | [IActivityService](./campaign-ext/IActivityService.md) | 🔗 |
| C | [TestActivityService](./campaign-ext/TestActivityService.md) | 🔗 |

## TaleWorlds.Avatar.PlayerServices (1)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [AvatarServices](./campaign-ext/AvatarServices.md) | 🔗 |

## TaleWorlds.LinQuick (2)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [LinQuick](./campaign-ext/LinQuick.md) | 🔗 |
| C | [Min](./campaign-ext/Min.md) | 🔗 |

## TaleWorlds.ModuleManager (9)

| | 名称 Name | 文档 Doc |
|---|---|---|
| S | [DependedModule](./campaign-ext/DependedModule.md) | 🔗 |
| C | [Extensions](./engine/Extensions.md) | 🔗 |
| I | [IPlatformModuleExtension](./campaign-ext/IPlatformModuleExtension.md) | 🔗 |
| E | [ModuleCategory](./campaign-ext/ModuleCategory.md) | 🔗 |
| C | [ModuleHelper](./campaign-ext/ModuleHelper.md) | 🔗 |
| C | [ModuleInfo](./campaign-ext/ModuleInfo.md) | 🔗 |
| E | [ModuleType](./campaign-ext/ModuleType.md) | 🔗 |
| C | [SubModuleInfo](./campaign-ext/SubModuleInfo.md) | 🔗 |
| E | [SubModuleTags](./campaign-ext/SubModuleTags.md) | 🔗 |

## TaleWorlds.Starter.Library (1)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [Program](./mission-ext/Program.md) | 🔗 |

## psai.Editor (10)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [AudioData](./campaign-ext/AudioData.md) | 🔗 |
| E | [CompatibilityReason](./campaign-ext/CompatibilityReason.md) | 🔗 |
| E | [CompatibilitySetting](./campaign-ext/CompatibilitySetting.md) | 🔗 |
| E | [CompatibilityType](./campaign-ext/CompatibilityType.md) | 🔗 |
| C | [Group](./campaign-ext/Group.md) | 🔗 |
| C | [ProjectProperties](./campaign-ext/ProjectProperties.md) | 🔗 |
| C | [PsaiMusicEntity](./campaign-ext/PsaiMusicEntity.md) | 🔗 |
| C | [PsaiProject](./campaign-ext/PsaiProject.md) | 🔗 |
| C | [Segment](./campaign-ext/Segment.md) | 🔗 |
| C | [Theme](./campaign-ext/Theme.md) | 🔗 |

## psai.net (19)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [AudioData](./campaign-ext/AudioData.md) | 🔗 |
| C | [AudioPlaybackLayerChannelStandalone](./campaign-ext/AudioPlaybackLayerChannelStandalone.md) | 🔗 |
| S | [Follower](./campaign-ext/Follower.md) | 🔗 |
| C | [PlaybackChannel](./campaign-ext/PlaybackChannel.md) | 🔗 |
| C | [PsaiCore](./campaign-ext/PsaiCore.md) | 🔗 |
| S | [PsaiInfo](./campaign-ext/PsaiInfo.md) | 🔗 |
| E | [PsaiPlayMode](./campaign-ext/PsaiPlayMode.md) | 🔗 |
| E | [PsaiResult](./campaign-ext/PsaiResult.md) | 🔗 |
| E | [PsaiState](./campaign-ext/PsaiState.md) | 🔗 |
| C | [Segment](./campaign-ext/Segment.md) | 🔗 |
| C | [SegmentInfo](./campaign-ext/SegmentInfo.md) | 🔗 |
| E | [SegmentSuitability](./campaign-ext/SegmentSuitability.md) | 🔗 |
| C | [Soundtrack](./campaign-ext/Soundtrack.md) | 🔗 |
| C | [SoundtrackInfo](./campaign-ext/SoundtrackInfo.md) | 🔗 |
| C | [Theme](./campaign-ext/Theme.md) | 🔗 |
| C | [ThemeInfo](./campaign-ext/ThemeInfo.md) | 🔗 |
| E | [ThemeInterruptionBehavior](./campaign-ext/ThemeInterruptionBehavior.md) | 🔗 |
| E | [ThemeType](./campaign-ext/ThemeType.md) | 🔗 |
| C | [Weighting](./campaign-ext/Weighting.md) | 🔗 |
